Add 4 fragments and Popup menu for chair list fragment

--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -13,11 +13,11 @@
         android:background="@drawable/background_cube"
         android:clickable="true"
         android:focusable="true"
-        tools:context=".ForgetPasswordFragment">
+        tools:context=".authentication.forgetpass.ForgetPasswordFragment">
 
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/back"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="60dp"
@@ -35,7 +35,7 @@
             android:src="@drawable/icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/back" />
 
         <TextView
             android:id="@+id/textView"
