--- a/app/src/main/res/drawable/orange_button.xml
+++ b/app/src/main/res/drawable/orange_button.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/colorOrange"/>
-            <corners android:radius="15dp" />
+        <item>
+            <shape android:shape="oval">
+                <solid android:color="#F1BC12"/>
+            </shape>
+        </item>
 
-        </shape>
-    </item>
+
 </selector>
