--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,12 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showin="navigation_view">
-
     <group android:checkableBehavior="single">
         <item android:id="@+id/general"
             android:title="@string/general"
             android:checked="true"/>
-        <item android:id="@+id/users"
+        <item android:id="@+id/vendors"
             android:title="@string/vendors"/>
         <item android:id="@+id/profile"
             android:title="@string/profile"/>
