--- a/app/src/main/res/layout/fragment_chair_info.xml
+++ b/app/src/main/res/layout/fragment_chair_info.xml
@@ -13,8 +13,7 @@
             android:id="@+id/cardView2"
             android:layout_width="330dp"
             android:layout_height="133dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:background="@color/white"
             app:cardCornerRadius="15dp"
@@ -28,12 +27,12 @@
 
                 <view
                     android:id="@+id/view3"
+                    class="android.support.v4.view.ViewPager"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="8dp"
-                    class="android.support.v4.view.ViewPager"
                     android:background="@color/textColor"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -144,12 +143,10 @@
         <android.support.v7.widget.CardView
             android:layout_width="200dp"
             android:layout_height="133dp"
-            android:layout_marginStart="30dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="32dp"
             app:cardCornerRadius="15dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cardView2"
             app:layout_constraintTop_toTopOf="parent">
 
             <android.support.constraint.ConstraintLayout
@@ -184,13 +181,11 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginBottom="16dp"
-                    android:background="@drawable/orange_button"
-                    android:text="12"
+                    android:background="@drawable/orange_button_circle"
                     android:paddingTop="4dp"
+                    android:text="12"
                     android:textAlignment="center"
                     android:textSize="30sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -204,9 +199,9 @@
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="21dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="24dp"
             app:cardCornerRadius="15dp"
             app:layout_constraintBottom_toTopOf="@+id/button2"
