--- a/app/src/main/res/layout/item_floor.xml
+++ b/app/src/main/res/layout/item_floor.xml
@@ -81,9 +81,9 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
                 <ImageView
-                    android:id="@+id/menu_chair"
-                    android:layout_width="13dp"
-                    android:layout_height="39dp"
+                    android:id="@+id/menu_floor"
+                    android:layout_width="16dp"
+                    android:layout_height="43dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="24dp"
                     android:clickable="true"
