--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -4,9 +4,10 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="item"
-            type="com.the.bamstroyputs.model.Project"/>
+            type="com.the.bamstroyputs.model.Project" />
 
     </data>
 
@@ -18,11 +19,11 @@
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="15dp"
             card_view:cardBackgroundColor="@color/colorWhite"
             card_view:cardCornerRadius="15dp"
             card_view:cardElevation="2dp"
@@ -49,25 +50,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
+                    android:editable="false"
                     android:text="@{item.name, default=name}"
                     android:textColor="@color/blueTextColor"
                     android:textSize="30sp"
-                    android:editable="false"
                     app:layout_constraintBottom_toBottomOf="@+id/icon_project"
                     app:layout_constraintStart_toEndOf="@+id/icon_project"
                     app:layout_constraintTop_toTopOf="@+id/icon_project" />
 
-                <ImageView
-                    android:id="@+id/menu_chair"
-                    android:layout_width="11dp"
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="100dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_menu" />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/menu_project"
+                        android:layout_width="11dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginBottom="16dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:padding="20dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:background="@drawable/ic_menu"  />
+                </android.support.constraint.ConstraintLayout>
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
     </android.support.constraint.ConstraintLayout>
